--- a/homeworks/konstantin.rusenko_ConstantinRusenko/6-adaptive/style.css
+++ b/homeworks/konstantin.rusenko_ConstantinRusenko/6-adaptive/style.css
@@ -14,13 +14,24 @@ body {
 }
 
 .header__logo {
+  width: 30%;
   margin-left: 5%;
 }
 
+.header__logo-img {
+  width: auto;
+}
+
 .header__navigation {
+  margin-left: 20%;
   display: flex;
   align-items: center;
-  width: 40%;
+  width: 50%;
+}
+
+.navigation__info {
+  width: auto;
+  display: flex;
 }
 
 .navigation__number {
@@ -50,6 +61,10 @@ body {
   cursor: pointer;
 }
 
+.navigation__planet {
+  margin-right: 5px;
+}
+
 .navigation__language {
   display: flex;
   justify-content: center;
@@ -74,7 +89,7 @@ body {
 
 .delivery__tracking-block {
   position: absolute;
-  width: 50%;
+  width: 60%;
   display: flex;
   flex-direction: column;
   left: 5%;
@@ -101,7 +116,7 @@ body {
 
 .delivery__tracking {
   display: flex;
-  width: 100%;
+  width: auto;
 }
 
 .delivery__photo {
@@ -116,14 +131,17 @@ body {
   border: 1px solid #BDBDBD;
   box-sizing: border-box;
   border-radius: 30px 0 0 30px;
-  width: 30%;
+  width: 50%;
   font-family: Pragmatica;
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
   line-height: 23px;
-  color: #BABABA;
   text-align: center;
+}
+
+.tracking__input::placeholder {
+  color: #BABABA;
 }
 
 .tracking__button {
@@ -188,7 +206,6 @@ body {
 .about__list {
   display: flex;
   justify-content: center;
-  align-items: center;
   flex-wrap: wrap;
 }
 
@@ -303,7 +320,6 @@ body {
 }
 
 .apply__title {
-  align-self: flex-start;
   font-family: Pragmatica;
   font-style: normal;
   font-weight: 700;
@@ -314,7 +330,6 @@ body {
 }
 
 .apply__text {
-  align-self: flex-start;
   font-family: Pragmatica;
   font-style: normal;
   font-weight: 400;
@@ -325,7 +340,7 @@ body {
 }
 
 .apply_button {
-  align-self: flex-start;
+  margin-right: 30%;
   background: #E24329;
   border: none;
   border-radius: 25px;
@@ -403,16 +418,20 @@ body {
   color: #666;
 }
 
+.info__views {
+  display: flex;
+}
+
 .news__article {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   height: 50%;
   padding-bottom: 20px;
 }
 
 .news__subtitle {
+  height: 30%;
   font-family: Segoe UI;
   font-style: normal;
   font-weight: 700;
@@ -473,7 +492,6 @@ body {
 .footer__block {
   display: flex;
   justify-content: space-around;
-  align-items: center;
   width: 100%;
 }
 
@@ -485,6 +503,7 @@ body {
 }
 
 .info__text {
+  width: 60%;
   font-family: Pragmatica;
   font-style: normal;
   font-weight: 400;
@@ -495,9 +514,12 @@ body {
 
 .media-links {
   display: flex;
-  justify-content: space-around;
   align-self: flex-end;
   width: 100%;
+}
+
+.media-links > li {
+  padding-right: 30px;
 }
 
 .footer__links {
@@ -582,6 +604,10 @@ body {
     width: auto;
   }
 
+  .header__navigation {
+    margin-left: 0;
+  }
+
   .tracking__input {
     width: 50%;
   }
@@ -614,12 +640,22 @@ body {
     display: none;
   }
 
+  .news__title {
+    width: 80%;
+  }
+
   .clients__list {
     flex-wrap: wrap;
+    align-items: center;
   }
 
   .clients__list > li {
+    padding: 10px 0;
     width: 30%;
+  }
+
+  .contact-info {
+    width: 40%;
   }
 }
 
@@ -636,6 +672,11 @@ body {
 
   .header__navigation {
     width: auto;
+    margin-left: 0;
+  }
+
+  .header__button {
+    margin: 0;
   }
 
   .navigation__info {
@@ -693,5 +734,25 @@ body {
 
   .footer__block {
     flex-direction: column;
+  }
+
+  .media-links > li {
+    padding-right: 20px;
+  }
+
+  .footer__links {
+    padding-left: 25%;
+  }
+
+  .footer__policy {
+    padding-left: 25%;
+  }
+
+  .info__text {
+    padding-left: 25%;
+  }
+
+  .media-links {
+    width: auto;
   }
 }
