--- a/homeworks/maksym.selenkov_MaksymSelenkov/6-adaptive/style.css
+++ b/homeworks/maksym.selenkov_MaksymSelenkov/6-adaptive/style.css
@@ -8,6 +8,17 @@
     url("./fonts/Pragmatica/Pragmatica-Light.ttf") format("truetype");
 }
 
+@font-face {
+  font-family: "Pragmatica";
+  font-style: normal;
+  font-weight: 700;
+  src: local("Pragmatica-Bold"), local("Pragmatica Bold"),
+    url("./fonts/Pragmatica/Pragmatica-Bold.woff2") format("woff2"),
+    url("./fonts/Pragmatica/Pragmatica-Bold.woff") format("woff"),
+    url("./fonts/Pragmatica/Pragmatica-Bold.ttf") format("truetype");
+}
+
+
 body {
   font-family: "Pragmatica", serif;
   font-size: 16px;
@@ -90,14 +101,14 @@ button:hover {
   font-size: 16px;
   line-height: 110%;
   color: #FFF;
-  margin-left: 20px;
+  margin-left: 47px;
 }
 
 .menu__language {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-left: 20px;
+  margin-left: 42px;
 }
 
 .menu__language-bar {
@@ -114,15 +125,13 @@ button:hover {
 }
 
 .page__heading {
+  max-width: 730px;
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
 }
 
 .heading__title {
-  width: 100%;
-  max-width: 731px;
-  height: 100%;
-  max-height: 204px;
+  flex: 1 1 100%;
   font-weight: 700;
   font-size: 48px;
   line-height: 142%;
@@ -131,10 +140,8 @@ button:hover {
 }
 
 .heading__text {
-  width: 100%;
   max-width: 615px;
-  height: 100%;
-  max-height: 52px;
+  flex: 1 1 100%;
   font-size: 18px;
   line-height: 144%;
   color: #FFF;
@@ -142,10 +149,11 @@ button:hover {
 }
 
 .heading__form {
-  width: 100%;
+  flex: 1 1 100%;
   max-width: 570px;
   height: 60px;
   display: flex;
+  margin-bottom: 200px;
 }
 
 .heading__input {
@@ -172,7 +180,6 @@ button:hover {
   line-height: 16px;
   text-align: center;
   color: #FFF;
-  margin-bottom: 200px;
 }
 
 .page__picture {
@@ -217,17 +224,33 @@ button:hover {
   flex-wrap: wrap;
   justify-content: space-between;
   margin: 0 135px;
+  gap: 30px;
 }
 
 .card {
   flex: 1 1 25%;
   border-radius: 16px;
-  margin: 0 20px 20px 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   padding: 24px;
+  text-align: center;
+}
+
+.card:nth-child(3n) {
+  margin-right: 0;
+}
+
+.card__title {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 133%;
+  text-align: center;
+}
+
+.card__text {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
   text-align: center;
 }
 
@@ -313,7 +336,7 @@ button:hover {
 }
 
 .apply__button {
-  padding: 12px 24px;
+  padding: 15px 49px;
   max-width: 200px;
   width: 100%;
   max-height: 50px;
@@ -327,7 +350,7 @@ button:hover {
 }
 
 .news {
-  margin: 100px 135px 250px;
+  margin: 100px 135px 50px;
 }
 
 .news__heading {
@@ -342,6 +365,7 @@ button:hover {
 
 .article {
   flex: 1 1 20%;
+  max-width: 370px;
 }
 
 .article__picture {
@@ -356,7 +380,7 @@ button:hover {
 }
 
 .clients {
-  margin: 60px 135px;
+  margin: 0 135px;
 }
 
 .clients__logo {
@@ -364,6 +388,8 @@ button:hover {
   flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
+  margin-top: 20px;
+  margin-bottom: 50px;
 }
 
 .footer {
@@ -458,25 +484,54 @@ button:hover {
   }
 
   .header__logo {
-    margin-right: 0;
+    margin: 0 auto;
     flex: 1 1 100%;
+  }
+
+  .page {
+    padding: 50px;
   }
 
   .page__picture {
     display: none;
   }
 
+  .heading__form {
+    margin-bottom: 50px;
+  }
+
+  .apply {
+    margin: 0 auto;
+  }
+
   .apply__picture {
     display: none;
   }
 
+  .apply__heading {
+    margin: 0 auto;
+    text-align: center;
+  }
+
+  .apply__button {
+    margin: 0 auto;
+  }
+
+  .cards {
+    margin: 0 auto;
+  }
+
   .card {
     flex: 1 1 35%;
-    margin-right: 20px;
+  }
+
+  .clients {
+    margin: 0 auto 0 50px;
   }
 
   .clients__logo * {
-    max-width: 30%;
+    flex: 1 1 25%;
+    margin: 20px;
   }
 
   .heading__title {
@@ -485,15 +540,22 @@ button:hover {
     font-size: 26px;
     line-height: 142%;
     color: #FFF;
-    margin-bottom: 30px;
   }
 
   .heading__text {
     width: 100%;
-    font-size: 11px;
+    font-size: 16px;
     line-height: 144%;
     color: #FFF;
-    margin-bottom: 30px;
+  }
+
+  .news {
+    margin: 0 auto;
+    max-width: 370px;
+  }
+
+  .footer__info {
+    margin: 0 auto 0 50px;
   }
 }
 
@@ -503,6 +565,10 @@ button:hover {
     margin: 0 20px;
   }
 
+  .page {
+    padding: 25px;
+  }
+
   .page__picture {
     display: none;
   }
@@ -511,7 +577,20 @@ button:hover {
     display: none;
   }
 
+  .news {
+    width: 100%;
+    max-width: 320px;
+  }
+
+  .clients {
+    margin: 0 20px;
+  }
+
   .clients__logo * {
     max-width: 100%;
+  }
+
+  .footer__info {
+    margin: 0 auto;
   }
 }
