--- a/homeworks/ihor.kropyvnyi_20-Igorek-21/6-adaptive/src/style.css
+++ b/homeworks/ihor.kropyvnyi_20-Igorek-21/6-adaptive/src/style.css
@@ -20,6 +20,7 @@ html, body {
   padding: 0;
   height: 100%;
   max-width: 1440px;
+  min-height: 690px;
 }
 
 .content-row {
@@ -45,24 +46,24 @@ html, body {
 }
 
 .logo__link {
-  position: relative;
-  left: 50px;
   cursor: pointer;
 }
 
 .phone__link {
+  display: block;
+  width: 180px;
   color: #474747;
   cursor: pointer;
-  margin-left: 180px;
 }
 
 .phone-text {
   color: #666;
-  padding-left: 8px;
+  padding-left: 3px;
 }
 
 .header__button-login {
-  width: 107px;
+  display: block;
+  min-width: 107px;
   height: 40px;
   border: none;
   border-radius: 21px;
@@ -76,8 +77,6 @@ html, body {
 }
 
 .header__button-language {
-  position: relative;
-  right: 25px;
   display: flex;
   align-items: center;
   border: none;
@@ -85,32 +84,45 @@ html, body {
   cursor: pointer;
 }
 
+.wrapper-row__header {
+  width: 420px;
+  justify-content: space-between;
+  align-items: center;
+}
 
 .content-row__features {
   width: 100%;
-  height: 743px;
+  min-height: 743px;
   background-color: #E24329;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
 
 .content-columns__features-desc {
-  width: 931px;
-  height: 404px;
-  padding-left: 120px;
+  margin-left: 90px;
+  align-items: start;
+  box-sizing: content-box;
+  max-width: 656px;
+  min-height: 404px;
+  padding-bottom: 43px;
 }
 
 .features-desc__slogan-title {
   font-size: 48px;
   line-height: 68px;
+  word-wrap: break-word;
   color: #FFF;
 }
 
 .features-desc__slogan-text {
+  word-wrap: break-word;
+  height: 85px;
   color: #FFF;
-  padding-bottom: 30px;
 }
 
 .features-desc__search-parcel {
-  max-width: 570px;
+  width: 570px;
   display: flex;
 }
 
@@ -145,9 +157,10 @@ html, body {
 }
 
 .features__picture-delivery {
+  margin-right: 5px;
+  padding: 0;
   width: 620px;
   height: 500px;
-  margin-right: 50px;
 }
 
 .content-columns__annotation {
@@ -172,6 +185,7 @@ html, body {
 }
 
 .index-column__benefits {
+  justify-content: center;
   padding: 0 35px;
 }
 
@@ -221,19 +235,25 @@ html, body {
 }
 
 .content-row__ordering {
-  height: 700px;
+  min-height: 700px;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
 
 .ordering__picture-delivery {
   width: 648px;
   height: 520px;
+  margin-top: 15px;
+  margin-left: 75px;
 }
 
 .content-columns__ordering-desc {
   width: 502px;
   align-items: start;
+  max-height: 400px;
+  margin-bottom: 15px;
+  margin-right: 15px;
 }
 
 .ordering-desc__slogan-title {
@@ -267,12 +287,16 @@ html, body {
 
 .wrapper-row {
   display: flex;
-  justify-content: space-between;
+}
+
+.wrapper-row__news {
+  justify-content: space-around;
   flex-wrap: wrap;
 }
 
 .content-columns__news {
-  width: 370px;
+  width: 340px;
+  margin-left: 45px;
 }
 
 .news__picture {
@@ -293,6 +317,7 @@ html, body {
 
 .news__title {
   min-height: 80px;
+  margin-bottom: 0;
 }
 
 .news__text {
@@ -301,7 +326,8 @@ html, body {
 
 .news__link {
   position: relative;
-  right: 130px;
+  right: 118px;
+  margin-bottom: 15px;
 }
 
 
@@ -324,6 +350,10 @@ html, body {
   align-items: center;
 }
 
+.client-logo__link {
+  padding: 15px;
+}
+
 .main-footer {
   background: #FFF2EF;
 }
@@ -333,6 +363,7 @@ html, body {
   padding-top: 25px;
   display: flex;
   justify-content: space-around;
+  flex-wrap: wrap;
 }
 
 .footer__contact {
@@ -359,10 +390,12 @@ html, body {
 .content-row__footer-links {
   width: 50%;
   justify-content: space-around;
+  flex-wrap: wrap;
 }
 
 .content-columns__list {
   align-items: start;
+  padding: 25px;
 }
 
 .list__title {
@@ -416,9 +449,8 @@ html, body {
 .phone__link:focus,
 .footer__link:hover,
 .footer__link:focus {
-  background-color: #EFC8C8;
-  border-radius: 5px;
-  transition-duration: 300ms;
+  font-weight: 700;
+  transition-duration: 150ms;
 }
 
 .news__link:hover,
