--- a/homeworks/konstantin.rusenko_ConstantinRusenko/7-oop/src/style.css
+++ b/homeworks/konstantin.rusenko_ConstantinRusenko/7-oop/src/style.css
@@ -1,6 +1,10 @@
 .image-preview {
+  min-width: 100%;
+  min-height: 100%;
   display: flex;
   justify-content: center;
+  position: absolute;
+  top: 0;
 }
 
 .fade {
