--- a/homeworks/Andrii.Morozov_AndriiMorozov88/6-adaptive/style_adaptive.css
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/6-adaptive/style_adaptive.css
@@ -85,6 +85,11 @@ body {
   margin-left: 720px;
 }
 
+.page__bonik-left {
+  width: 620px;
+  height: 500px;
+}
+
 .page__track_inputfield {
   display: flex;
 }
@@ -170,12 +175,13 @@ body {
   width: 1440px;
   height: 600px;
   margin-top: 500px;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
 }
 
 .page__apply-aside {
-  display: block;
+  display: flex;
+  flex-direction: column;
 }
 
 .page__apply-aside-lines {
@@ -186,7 +192,8 @@ body {
   width: 200px;
   height: 60px;
   margin-top: 20px;
-  margin-left: 250px;
+  margin-left: auto;
+  margin-right: auto;
   font-size: 30px;
   background-color: #B41111;
   border-radius: 20px;
@@ -275,3 +282,142 @@ body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+@media (max-width: 767px) {
+
+  .page {
+    max-width: auto;
+    display: block;
+  }
+
+  .page__bonik {
+    display: none;
+  }
+
+  .page__bonik-left {
+    display: none;
+  }
+
+  .header__logo {
+    display: none;
+  }
+
+  .header {
+    display: flex;
+    max-width: auto;
+    height: 80px;
+    background-color: #FFF;
+    top: 0;
+    justify-content: center;
+  }
+
+  .page__track {
+    display: flex;
+    width: auto;
+    height: 300px;
+    justify-content: center;
+    background-color: #E24329;
+  }
+
+  .page__title {
+    text-align: center;
+    font-size: 37px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
+
+  .page__text {
+    text-align: center;
+    font-size: 30px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
+
+  .page__track_textfield-text-big {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 30px;
+    color: #EFF3F3;
+  }
+
+  .page__track_textfield-text-small {
+    font-size: 10px;
+    color: #EFF3F3;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
+
+  .page__offers {
+    display: flex;
+    width: auto;
+    height: auto;
+    justify-content: center;
+  }
+
+  .page__offers-block {
+    display: block;
+    text-align: center;
+    margin-left: 20px;
+    margin-right: 20px;
+    width: 450px;
+    height: 180px;
+    border-radius: 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
+  }
+
+  .page__offers-block-img {
+    display: none;
+  }
+
+  .page__apply {
+    display: flex;
+    width: auto;
+    height: auto;
+    margin-top: 50px;
+    align-items: center;
+  }
+
+  .page__apply-aside-lines {
+    font-size: 25px;
+    padding: 5px;
+  }
+
+  .page__apply-aside-button {
+    width: 200px;
+    height: 60px;
+    font-size: 30px;
+    background-color: #B41111;
+    border-radius: 20px;
+    color: #F0F8FF;
+    margin-bottom: 50px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
+
+  .page__news {
+    display: block;
+    height: auto;
+    margin-left: 550px;
+    margin-top: 50px;
+  }
+
+
+  .page__clients {
+    display: none;
+    margin-top: 100px;
+    margin-left: 150px;
+  }
+
+  .page__bottom {
+    display: flex;
+    background-color: #C47676;
+    align-items: center;
+    margin-top: 30px;
+    justify-content: center
+  }
+
+  .page__copyright {
+    display: flex;
+    height: 50px;
+    background-color: #B41111;
+    color: #F0F8FF;
+    justify-content: center;
+    padding-top: 5px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
+}
