--- a/homeworks/dmytro.kondaurov_DmitriyKondaurov/7-oop/src/styles.css
+++ b/homeworks/dmytro.kondaurov_DmitriyKondaurov/7-oop/src/styles.css
@@ -3,7 +3,7 @@ body {
 }
 
 .header {
-  max-width: 1140px;
+  max-width: 1440px;
   margin: auto;
 }
 
@@ -26,7 +26,7 @@ body {
 
 .gallery {
   padding: 0;
-  max-width: 1140px;
+  max-width: 1440px;
   margin: auto;
   display: flex;
   justify-content: center;
@@ -35,10 +35,30 @@ body {
 }
 
 .gallery__item {
+  position: relative;
+  overflow: hidden;
+  width: 375px;
+  height: 375px;
+  padding: 10px;
   list-style: none;
-  max-width: 360px;
 }
 
 .gallery__image {
   width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.btn-add-file {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+}
+
+@media only screen and (min-width: 768px) {
+
+  .gallery__item {
+    width: 325px;
+    height: 325px;
+  }
 }
